--- a/oi.html
+++ b/oi.html
@@ -5,7 +5,6 @@
     </head>
     <body>
         <h1>Welcome to my website</h1>
-        <h1>Si si</h1>
-        Oi WORLD!
+        ciao
     </body>
 </html>
