--- a/oi.html
+++ b/oi.html
@@ -4,7 +4,7 @@
         <title>Oi</title>
     </head>
     <body>
-        <h1>Welcome to my website</h1>
+        <h1 style="color:blue;add style>Welcome to my website</h1>
         <h2>Hello</h2>
         ciao
     </body>
